--- a/documentation/wordcab_api_reference.yaml
+++ b/documentation/wordcab_api_reference.yaml
@@ -978,15 +978,15 @@ paths:
           example: false
       requestBody:
         content:
-          multipart/form-data:
+          'multipart/form-data':
             schema:
               oneOf:
                 - $ref: "#/components/schemas/TranscriptFile"
                 - $ref: "#/components/schemas/AudioFile"
                 - $ref: "#/components/schemas/VTTFile"
-         application/json:
-           schema:
-             $ref: "#/components/schemas/jsonBody"
+          'application/json':
+            schema:
+              $ref: "#/components/schemas/jsonBody"
 #          text/plain:
 #            schema:
 #              $ref: "#/components/schemas/textBody"
