--- a/documentation/wordcab_api_reference.yaml
+++ b/documentation/wordcab_api_reference.yaml
@@ -788,9 +788,9 @@ paths:
                 - $ref: "#/components/schemas/TranscriptFile"
                 - $ref: "#/components/schemas/AudioFile"
                 - $ref: "#/components/schemas/VTTFile"
-          application/json:
-            schema:
-              $ref: "#/components/schemas/jsonBody"
+          # application/json:
+          #   schema:
+          #     $ref: "#/components/schemas/jsonBody"
       responses:
         '201':
           description: Successfully created a job
@@ -984,9 +984,9 @@ paths:
                 - $ref: "#/components/schemas/TranscriptFile"
                 - $ref: "#/components/schemas/AudioFile"
                 - $ref: "#/components/schemas/VTTFile"
-          application/json:
-            schema:
-              $ref: "#/components/schemas/jsonBody"
+          # application/json:
+          #   schema:
+          #     $ref: "#/components/schemas/jsonBody"
 #          text/plain:
 #            schema:
 #              $ref: "#/components/schemas/textBody"
