--- a/documentation/wordcab_api_reference.yaml
+++ b/documentation/wordcab_api_reference.yaml
@@ -1096,9 +1096,8 @@ paths:
           required: false
           description: >
             **Default value:** `-time_started` (descending order, based on the time the job was created)<br>
-            The list order of the jobs. You can use `+` or `-` to indicate ascending or descending order, respectively.<br>
-            Can be `display_name`, `job_name`, `job_status`, `source`, `summary_details`, `time_started`, 
-            `time_completed` or `transcript_id`.
+            The list order of the jobs. Can be `time_started` or `time_completed`. You can use `-` to indicate 
+            descending order, respectively.<br>
           schema:
             type: string
             default: -time_started
